style featured speakers and fix overflowing text in all areas when resizing screen to less than 350px width

--- a/assets/CSS/SCSS/main_style.scss
+++ b/assets/CSS/SCSS/main_style.scss
@@ -36,7 +36,7 @@
 }
 
 html {
-  font-size: 12px;
+  font-size: 13px;
 }
 
 // Colors //
@@ -71,6 +71,11 @@ $primary-font-light: 'Cocogoose-Pro-Light', sans-serif;
   left: -9999999px;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+  overflow: -moz-hidden-unscrollable;
+}
+
 /*
   =======================
   Typography
@@ -86,9 +91,17 @@ h1 {
   @include font-styles($font-size: 1em, $line-height: 1.1em, $font: $secondary-font);
 }
 
-h2,
-h3 {
+%h2 {
   @include font-styles($font-size: 1.4em, $font: $primary-font, $letter-spacing: -0.3px);
+}
+
+h2 {
+  @extend %h2;
+}
+
+h3 {
+  @extend %h2;
+  font-size: 1.2em;
 }
 
 a {
@@ -144,22 +157,23 @@ a:hover {
 .red-underline::before {
   position: absolute;
   content: "";
-  border-bottom: $primary-color 1px solid;
+  border-bottom: $primary-color 2px solid;
   bottom: 0;
-  width: 30px;
+  width: 35px;
 }
 
 .main-program-feature {
   background-color: rgba(255,255,255,0.05);
   display: grid;
-  grid-template-columns: auto 1fr 58%;
+  grid-template-columns: auto 22.5% 58%;
   grid-column-gap: 1em;
   align-items: center;
-  max-width: 500px;
+  max-width: 450px;
 }
 
 .main-program-feature i.fas {
-  font-size: 1.8em;
+  font-size: 2em;
+  text-align: right;
 }
 
 .main-program-feature-title {
@@ -175,5 +189,69 @@ a:hover {
   font-size: 1.1em;
   font-weight: 400;
   background-color: $primary-color;
-  padding: 1.8em 3.5em;
+  padding: 1.8em 0;
+  width: 300px;
+  min-width: auto;
+}
+
+/*
+  =======================
+  Featured Speakers
+  =======================
+*/
+.featured-speakers {
+  font-size: 1rem;
+  color: $secondary-color;
+  max-width: 450px;
+}
+
+.featured-speakers-title,
+.speaker-name {
+  font-weight: 600;
+}
+
+.profile-picture-div {
+  width: 100px;
+  height: 100px;
+}
+
+.profile-pattern {
+  width: 45%;
+  height: 45%;
+  background-color: $gray;
+  background: url("../images/black-square-pattern.png") -10px -5px/50% repeat;
+}
+
+.profile-picture {
+  object-fit: cover;
+  width: 90px;
+  height: 90px;
+  bottom: 0;
+  right: 0;
+}
+
+.position-correction {
+  object-position: center top;
+}
+
+.speaker-text {
+  display: grid;
+}
+
+.speaker-name {
+  font-size: 1.15em;
+}
+
+.speaker-sub-title {
+  color: #ec5242;
+}
+
+.speaker-text hr {
+  width: 1.3em;
+  border-color: $gray;
+  border-width: 2px;
+}
+
+.speaker-summary {
+  font-size: 0.9em;
 }
